# conductor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json
frontend/: index.html  package.json  vite.config.ts
frontend/src/: main.ts
frontend/types/: index.ts  primeCalculation.ts
openapi/tasks/prime_calculation/: index.yaml
scripts/: generate-types.js
src/: main.rs
src/api/: routes.rs
src/executor/: mod.rs  task_executor.rs  types.rs
src/streaming/: mod.rs  task_stream.rs
src/tasks/: mod.rs
src/tasks/prime_calculator/: calculator.rs  handler.rs  mod.rs
src/types/: mod.rs  prime_calculation.rs  requests.rs  visualisation.rs
src/visualisation/: mod.rs  visualiser.rs
